Calculator now works for a single operation and display the result

--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
                 <button id="aritmetic-operator" class="operator" value="/">÷</button>
             </div>
             <div class="btn-row-2">
-                <button class="num-btn">7</button>
-                <button class="num-btn">8</button>
-                <button class="num-btn">9</button>
+                <button id="digit" class="num-btn" value="7">7</button>
+                <button id="digit" class="num-btn" value="8">8</button>
+                <button id="digit" class="num-btn" value="9">9</button>
                 <button id="aritmetic-operator" class="operator" value="*">x</button>
             </div>
             <div class="btn-row-3">
-                <button class="num-btn">4</button>
-                <button class="num-btn">5</button>
-                <button class="num-btn">6</button>
+                <button id="digit" class="num-btn" value="4">4</button>
+                <button id="digit" class="num-btn" value="5">5</button>
+                <button id="digit" class="num-btn" value="6">6</button>
                 <button id="aritmetic-operator" class="operator" value="-">-</button>
             </div>
             <div class="btn-row-4">
-                <button class="num-btn">1</button>
-                <button class="num-btn">2</button>
-                <button class="num-btn">3</button>
+                <button id="digit" class="num-btn" value="1">1</button>
+                <button id="digit" class="num-btn" value="2">2</button>
+                <button id="digit" class="num-btn" value="3">3</button>
                 <button id="aritmetic-operator" class="operator" value="+">+</button>
             </div>
             <div class="btn-row-5">
-                <button class="large-btn">0</button>
+                <button id="digit" class="large-btn" value="0">0</button>
                 <button class="num-btn">.</button>
                 <button id="equal-operator" class="operator">=</button>
             </div>
