Calculator now works with chained operations

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="calculator">
             <div class="header">
                 <div class="display">
-                    <p class="result">000</p>
+                    <p class="display-result">000</p>
                 </div>
             </div>
             <div class="btn-row-1">
