--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
                 </div>
             </div>
             <div class="btn-row-1">
-                <button class="num-btn">C</button>
-                <button class="num-btn">+/-</button>
+                <button id="clear-btn" class="num-btn">C</button>
                 <button class="num-btn">%</button>
-                <button id="aritmetic-operator" class="operator" value="/">÷</button>
+                <button class="num-btn">←</button>
+                <button id="aritmetic-operator" class="operator" value="÷">÷</button>
             </div>
             <div class="btn-row-2">
                 <button id="digit" class="num-btn" value="7">7</button>
                 <button id="digit" class="num-btn" value="8">8</button>
                 <button id="digit" class="num-btn" value="9">9</button>
-                <button id="aritmetic-operator" class="operator" value="*">x</button>
+                <button id="aritmetic-operator" class="operator" value="x">x</button>
             </div>
             <div class="btn-row-3">
                 <button id="digit" class="num-btn" value="4">4</button>
@@ -39,7 +39,8 @@
                 <button id="aritmetic-operator" class="operator" value="+">+</button>
             </div>
             <div class="btn-row-5">
-                <button id="digit" class="large-btn" value="0">0</button>
+                <button class="num-btn">+/-</button>
+                <button id="digit" class="num-btn" value="0">0</button>
                 <button class="num-btn">.</button>
                 <button id="equal-operator" class="operator">=</button>
             </div>
