--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <div class="calculator">
             <div class="header">
                 <div class="display">
-                    <p class="display-result"></p>
+                    <p class="display-result">0</p>
                 </div>
             </div>
             <div class="btn-row-1">
                 <button id="clear-btn" class="num-btn">C</button>
-                <button class="num-btn">%</button>
-                <button class="num-btn">←</button>
+                <button id="percentage-btn" class="num-btn">%</button>
+                <button id="backspace-btn" class="num-btn">←</button>
                 <button id="aritmetic-operator" class="operator" value="÷">÷</button>
             </div>
             <div class="btn-row-2">
@@ -39,9 +39,9 @@
                 <button id="aritmetic-operator" class="operator" value="+">+</button>
             </div>
             <div class="btn-row-5">
-                <button class="num-btn">+/-</button>
+                <button id="positive-negative-btn" class="num-btn">+/-</button>
                 <button id="digit" class="num-btn" value="0">0</button>
-                <button class="num-btn">.</button>
+                <button id="decimal-btn" class="num-btn">.</button>
                 <button id="equal-operator" class="operator">=</button>
             </div>
         </div>
