--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <title>Calculator</title>
     <script src="script.js" defer></script>
+    <script src="keyboard_support.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8"/>
+    <script type="text/javascript"> document.addEventListener('click', function(e) { if(document.activeElement.toString() == '[object HTMLButtonElement]'){ document.activeElement.blur(); } }); </script>
 </head>
 <body>
     <div class="container">
